--- a/src/css/main.css
+++ b/src/css/main.css
@@ -126,6 +126,16 @@ body {
   -webkit-filter: sepia(1);
           filter: sepia(1);
 }
+.upload-filter-label-phobos .upload-filter-preview,
+.filter-phobos {
+  -webkit-filter: hue-rotate(320deg);
+          filter: hue-rotate(320deg);
+}
+.upload-filter-label-heat .upload-filter-preview,
+.filter-heat {
+  -webkit-filter: hue-rotate(120deg);
+          filter: hue-rotate(120deg);
+}
 
 .upload-filter-label-marvin .upload-filter-preview,
 .filter-marvin {
